--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,15 @@
   </h1>
 </div>
 
+<div>
+  Left:
+  <input type="file" class="upload" (change)="changeListener('left', $event.target.files)">
+</div>
 
-<ag-grid-angular
-    style="width: 950px; height: 500px;"
-    class="ag-theme-balham"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    >
+<div>
+  Right:
+  <input type="file" class="upload" (change)="changeListener('right', $event.target.files)">
+</div>
+
+<ag-grid-angular style="width: 950px; height: 500px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs">
 </ag-grid-angular>
