--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   </h1>
 </div>
 
+<div style="width: 1000px; margin: 0 auto">
 <div>
   Left:
   <input type="file" class="upload" (change)="changeListener('left', $event.target.files)">
@@ -14,5 +15,6 @@
   <input type="file" class="upload" (change)="changeListener('right', $event.target.files)">
 </div>
 
-<ag-grid-angular style="width: 950px; height: 500px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs">
+<ag-grid-angular style="width: 100%; height: 750px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs">
 </ag-grid-angular>
+</div>
